--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,12 @@
+html, body, #root {
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100% !important;
+  max-height: none !important;
+  max-width: none !important;;        /* mindestens Fensterhöhe */
+  background-color: orange;
+  display: block;          /* flex entfernen, sonst wird scrollen geblockt */
+  overflow-y: auto;        /* erlaubt vertikales Scrollen */
+}
 
 
